<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".LocalActivity">

    <item android:id="@+id/addemployed" android:title="@string/add"
        android:orderInCategory="100" android:showAsAction="always"
        android:icon="@drawable/addemployed"/>

    <item android:id="@+id/addservice" android:title="@string/add"
        android:orderInCategory="100" android:showAsAction="always"
        android:icon="@drawable/addservice"/>

    <item android:id="@+id/action_example" android:title="@string/action_example"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/cerrar_sesion" android:title="@string/cerrar_sesion"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/salir" android:title="@string/salir"
        android:orderInCategory="100" android:showAsAction="never" />

</menu>