<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cmovil.gr7.rapidturns.Register"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:imeActionLabel="@string/name"
        android:imeOptions="actionUnspecified"
        android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

    <EditText android:id="@+id/username" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_username"
        android:imeActionLabel="@string/lastname"
        android:imeOptions="actionUnspecified" android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:imeActionLabel="@string/lastname"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

    <EditText android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:imeActionLabel="@string/lastname"
        android:imeOptions="actionUnspecified" android:inputType="textEmailAddress"
        android:maxLines="1" android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:id="@+id/textView"
        android:paddingTop="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:id="@+id/client" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:id="@+id/local" />

    </RadioGroup>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:layout_marginTop="10dp" />

</LinearLayout>
